--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Sejam bem vindos, eu sou o <abbr title="Marco Aurélio">Roxton</abbr>, entusiasta de games e hoje estou lançando o meu primeiro tutorial revista do game Chrono Trigger. Isso, meu sonho é criar guias/detonados de games em modo livro para que futuramente eu possa estar publicando uma cópia física para lembrar tempos gloriozos.
         Todos os tutoriais serão feitos com o máximo de detalhes possíveis, com objetivo de você não perder um item ou história se quer e hoje estarei disponibilizando a primeira versão da revista para possíveis opiniões e idéias, todos serão bem vindos para opinar para finalmente conseguirmos uma revista legal, agradável e cheio de conteúdo.
         Obrigado.<br>
-        OBS: O site está realmente sem "seco" mas com o tempo irei atualizando e aperfeiçoando, melhorando a aparência com CSS e criando novas funções.
+        OBS: O site está realmente bem "seco" mas com o tempo irei atualizando e aperfeiçoando, melhorando a aparência com CSS e criando novas funções.
         <table style="width:100%" border="1">
           <caption>Revista Chrono Trigger</caption>
           <tr>
