--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <table style="width:100%" border="1">
           <caption>Revista Chrono Trigger</caption>
           <tr>            
-            <th><a href="https://drive.google.com/file/d/1mHg1KaLdGbBvB2qC4WYeTPk1KnS2hDFD/view?usp=sharing">Versão 0.0.2</a></th>
-            <th><a href="https://drive.google.com/file/d/1AOjrOS97mTDuDmUWMkRhxu61v7DUrFdQ/view?usp=sharing">Versão 0.0.1</a></th>
+            <td><a href="https://drive.google.com/file/d/1mHg1KaLdGbBvB2qC4WYeTPk1KnS2hDFD/view?usp=sharing">Versão 0.0.2</a></td>
+            <td><a href="https://drive.google.com/file/d/1AOjrOS97mTDuDmUWMkRhxu61v7DUrFdQ/view?usp=sharing">Versão 0.0.1</a></td>
           </tr>
         </table>
     </main>
