--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/menu.css">
     <title>Snowflake Games</title>
+    <style>
+      table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+      }
+      th, td {
+      padding: 15px;
+      }
+</style>
   </head>
   <body>
     <header>
