--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Snowflake Games</title>
     <style>
       table, th, td {
-      border: 1px solid black;
-      border-collapse: collapse;
+        border: 1px solid black;
+        border-collapse: collapse;
+        height: 25px;
       }
       th, td {
-      padding: 15px;
+        padding: 15px;
+        height: 25px;
       }
-</style>
+      </style>
   </head>
   <body>
     <header>
