--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
       table, th, td {
         border: 1px solid black;
         border-collapse: collapse;
-        height: 25px;
       }
       th, td {
         padding: 15px;
-        height: 25px;
       }
       </style>
   </head>
@@ -33,7 +31,7 @@
         Todos os tutoriais serão feitos com o máximo de detalhes possíveis, com objetivo de você não perder um item ou história se quer e hoje estarei disponibilizando a primeira versão da revista para possíveis opiniões e idéias, todos serão bem vindos para opinar para finalmente conseguirmos uma revista legal, agradável e cheio de conteúdo.
         Obrigado.<br>
         OBS: O site está realmente bem "seco" mas com o tempo irei atualizando e aperfeiçoando, melhorando a aparência com CSS e criando novas funções.
-        <table style="width:100%" border="1">
+        <table style="width:100%" border="1" width=300 height=100>
           <caption>Revista Chrono Trigger</caption>
           <tr>            
             <td><a href="https://drive.google.com/file/d/1mHg1KaLdGbBvB2qC4WYeTPk1KnS2hDFD/view?usp=sharing">Versão 0.0.2</a></td>
