--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <br>
           <tr>
             <td>08/09/2020</td>
-            <td><a href="https://drive.google.com/file/d/1mHg1KaLdGbBvB2qC4WYeTPk1KnS2hDFD/view?usp=sharing">Versão 0.0.2</a></td>
+            <td><a href="https://drive.google.com/file/d/1mHg1KaLdGbBvB2qC4WYeTPk1KnS2hDFD/view?usp=sharing" target="_blank">Versão 0.0.2</a></td>
           </tr>
           <tr>
             <td>06/09/2020</td>
-            <td><a href="https://drive.google.com/file/d/1AOjrOS97mTDuDmUWMkRhxu61v7DUrFdQ/view?usp=sharing">Versão 0.0.1</a></td>
+            <td><a href="https://drive.google.com/file/d/1AOjrOS97mTDuDmUWMkRhxu61v7DUrFdQ/view?usp=sharing" target="_blank">Versão 0.0.1</a></td>
           </tr>
         </table>
     </main>
@@ -94,7 +94,7 @@
       <nav>
         <br>
         <ul>
-            <li><a href="mailto:marcozakostelsky@gmail.com">&phone;Contato</a>
+            <li><a href="mailto:marcozakostelsky@gmail.com" target="_blank">&phone;Contato</a>
         </ul>
       </nav>
     </footer>
