--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <nav>
         <br>
         <ul>
-            <li><a href="mailto:marcozakostelsky@gmail.com" target="_blank">&phone;Contato</a>
+            <li><a href="mailto:marcozakostelsky@gmail.com">&phone;Contato</a>
         </ul>
       </nav>
     </footer>
